--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.0.1-jre'
+    testImplementation 'org.hamcrest:hamcrest:2.+'
+    testImplementation 'io.rest-assured:rest-assured:5.+'
+    implementation 'com.github.javafaker:javafaker:1.+'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.+'
 }
 
 testing {
