--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,8 +22,8 @@ dependencies {
     implementation 'com.google.guava:guava:31.0.1-jre'
     testImplementation 'org.hamcrest:hamcrest:2.+'
     testImplementation 'io.rest-assured:rest-assured:5.+'
-    implementation 'com.github.javafaker:javafaker:1.+'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.+'
+    testImplementation 'com.github.javafaker:javafaker:1.+'
+    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.+'
 }
 
 testing {
